terraform/provider/aws/organizations/xctuality-metafarms/accounts/xctuality-higher-env/eks-v2/k8/xctuality/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: xctuality-app-prd


---
apiVersion: v1
kind: Namespace
metadata:
  name: xctuality-app-stg
