terraform/provider/aws/organizations/xctuality-metafarms/accounts/xctuality-higher-env/eks-v2/k8/xctuality/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xctuality-ingress
  namespace: xct-apps
  annotations:
    # Ingress class to use the NGINX Ingress Controlle
    # AWS-specific annotations for SSL and the load balancer
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-southeast-1:408897322877:certificate/c138241b-1ab7-42af-b410-975bcbb2168a"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    # alb.ingress.kubernetes.io/ssl-policy: 'ELBSecurityPolicy-TLS13-1-2-2021-06'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    ## PRODUCTION ====================================================================

    - host: toureast-gameplay.xctuality.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: toureast-gameplay-prd-svc
                port:
                  number: 3000
    - host: api-qr-generator.xctuality.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-qr-generator-prd-svc
                port:
                  number: 80
    - host: qr.xctuality.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-qr-generator-prd-svc
                port:
                  number: 3000
    - host: mautic.xctuality.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mautic-prd-svc
                port:
                  number: 80
    - host: xctuality.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xct-corp-stg-svc
                port:
                  number: 3000

    ## STAGING ====================================================================

    - host: api-qr-generator-test.xctuality.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-qr-generator-stg-svc
                port:
                  number: 80
    - host: qr-test.xctuality.com
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-qr-generator-stg-svc
                port:
                  number: 3000

    - host: siglap-test.xctuality.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-siglap-stg-svc
                port:
                  number: 80
    - host: admin-siglap-test.xctuality.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-siglap-stg-svc
                port:
                  number: 80
    - host: api-siglap-test.xctuality.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-siglap-stg-svc
                port:
                  number: 80

    - host: api-drm.xctuality.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server-drm-stg-svc
                port:
                  number: 4000
